# TerminalFileManager

./: CMakeLists.txt  LICENSE  README.md  build.sh
include/core/: Directory.hpp  File.hpp
include/ui/: NcursesApp.hpp  NcursesManager.hpp  NcursesWrapper.hpp
include/ui/views/: ExplorerContext.hpp  ExplorerView.hpp  FileActionHandler.hpp  FileInfoView.hpp  IView.hpp  MainMenuView.hpp  SidebarView.hpp  ViewType.hpp
src/: main.cpp
src/core/: Directory.cpp  File.cpp
src/ui/: NcursesApp.cpp  NcursesManager.cpp  NcursesWrapper.cpp
src/ui/views/: ExplorerView.cpp  FileActionHandler.cpp  FileInfoView.cpp  MainMenuView.cpp  SidebarView.cpp
